scripts/breaking-elastic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 20
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        logging: opal-acc-api
        logFormat: opal
    spec:
      containers:
      - name: nginx
        image: elastic-overload
